err/pd.lib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pd'...
Listing './lib/python3.5/site-packages/pd/lib'...
Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject.py", line 24
    except AttributeError,msg :
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py'...
***   File "./lib/python3.5/site-packages/pd/lib/fuzzyobject_sample.py", line 38
    print ob.name,ob.agg
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/linear_quantizator.py'...
***   File "./lib/python3.5/site-packages/pd/lib/linear_quantizator.py", line 99
    print x,y
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pd/lib/topsort.py'...
***   File "./lib/python3.5/site-packages/pd/lib/topsort.py", line 50
    raise UnknownDependency, "Unknown dependency %s of %s" % (dep, obj)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pd/lib/utility.py'...
***   File "./lib/python3.5/site-packages/pd/lib/utility.py", line 19
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pd.lib-0.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
